Modern IDB: storage/indexeddb/cursor-primary-key-order.html fails with SQLite backend. https://bugs.webkit.org/show_bug.cgi?id=153800

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (Existing tests now unskipped).

The IndexRecords SQL schema did not order things by primaryKey.

Easy fix to the schema. Sadly requires a migration...

* Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:
(WebCore::IDBServer::v1IndexRecordsTableSchema):
(WebCore::IDBServer::v1IndexRecordsTableSchemaAlternate):
(WebCore::IDBServer::v2IndexRecordsTableSchema):
(WebCore::IDBServer::v2IndexRecordsTableSchemaAlternate):
(WebCore::IDBServer::SQLiteIDBBackingStore::ensureValidIndexRecordsTable):
(WebCore::IDBServer::SQLiteIDBBackingStore::createAndPopulateInitialDatabaseInfo):
* Modules/indexeddb/server/SQLiteIDBBackingStore.h:

LayoutTests:

* platform/mac-wk1/TestExpectations:


Canonical link: https://commits.webkit.org/171897@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196038 268f45cc-cd09-0410-ab3c-d52691b4dbfc